# AdventOfCode2020

./: Cargo.toml  ReportRepair
src/: BinaryBoarding.rs  PassportProcessing.rs  PasswordPhilosophy.rs  ReportRepair  ReportRepair.rs  TobogganTrajectory.rs  adapter_array.rs  allergen_assessment.rs  combo_breaker.rs  conway_cubes.rs  crab_combat.rs  crab_cups.rs  custom_customs.rs  docking_data.rs  encoding_error.rs  handheld_halting.rs  handy_haversacks.rs  jurassic_jigsaw.rs  lobby_layout.rs  main.rs  monster_messages.rs  operation_order.rs  passport_processing.rs  rain_risk.rs  rambunctious_recitation.rs  report_repairs.rs  seating_system.rs  shuttle_search.rs  ticket_translation.rs  toboggan_trajectory.rs
