[package]
name = "AdventOfCode2020"
version = "0.1.0"
authors = ["Adrian Zgorzałek <adrian@adek.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
scan-rules = "0.2.0"

[[bin]]
name = "ReportRepair"
path = "src/ReportRepair.rs"

[[bin]]
name = "PasswordPhilosophy"
path = "src/PasswordPhilosophy.rs"

[[bin]]
name = "TobogganTrajectory"
path = "src/TobogganTrajectory.rs"

[[bin]]
name = "PassportProcessing"
path = "src/PassportProcessing.rs"

[[bin]]
name = "BinaryBoarding"
path = "src/BinaryBoarding.rs"