[package]
name = "AdventOfCode2020"
version = "0.1.0"
authors = ["Adrian Zgorzałek <adrian@adek.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
regex = "1.4.2"
scan-rules = "0.2.0"

[[bin]]
name = "report_repair"
path = "src/report_repairs.rs"

[[bin]]
name = "password_philosophy"
path = "src/password_philosophy.rs"

[[bin]]
name = "toboggan_trajectory"
path = "src/toboggan_trajectory.rs"

[[bin]]
name = "passport_processing"
path = "src/passport_processing.rs"

[[bin]]
name = "binary_boarding"
path = "src/binary_boarding.rs"

[[bin]]
name = "custom_customs"
path = "src/custom_customs.rs"

[[bin]]
name = "handy_haversacks"
path = "src/handy_haversacks.rs"

[[bin]]
name = "handheld_halting"
path = "src/handheld_halting.rs"

[[bin]]
name = "encoding_error"
path = "src/encoding_error.rs"

[[bin]]
name = "adapter_array"
path = "src/adapter_array.rs"

[[bin]]
name = "seating_system"
path = "src/seating_system.rs"

[[bin]]
name = "rain_risk"
path = "src/rain_risk.rs"

[[bin]]
name = "shuttle_search"
path = "src/shuttle_search.rs"